--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -6,11 +6,10 @@
   </li>
 </ul>
 
-<h2>{{hero.name | uppercase}} Details</h2>
-<div><span>id: </span>{{hero.id}}</div>
+<h2>{{selectedHero.name | uppercase}} Details</h2>
+<div><span>id: </span>{{selectedHero.id}}</div>
 <div>
   <label>name:
-    <input [(ngModel)]="hero.name" placeholder="name" >
+    <input [(ngModel)]="selectedHero.name" placeholder="name">
   </label>
-  <span>name: </span>{{hero.name}}
 </div>
